--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -7,7 +7,7 @@
 <li><a href="../it/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--complete" title="Preferenze di Sketcher (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Ustawienia (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="Prefer&ecirc;ncias (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--high" title="&#1053;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; (77% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#35373;&#23450; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="docnav">
@@ -399,7 +399,7 @@
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Pohled zep&#345;edu, m&#345;&iacute;&#382;ka zapnut&aacute; a m&#345;&iacute;&#382;ka vypnut&aacute;</p>
 <p><span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-03.png&amp;filetimestamp=20220814170225&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-03.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span> <span typeof="mw:File"><a href="../index.php?title=Sketcher-Preferences-Note-Arrowhead-04.png&amp;filetimestamp=20220814170259&amp;.html" class="mw-file-description"><img src="../File/Sketcher-Preferences-Note-Arrowhead-04.png" decoding="async" width="200" height="200" class="mw-file-element" data-file-width="200" data-file-height="200"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Rear view, grid enabled and grid disabled hiding arrowheads on the opposite end as well as the dimension value</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Pohled zezadu, m&#345;&iacute;&#382;ka zapnut&aacute; a m&#345;&iacute;&#382;ka vypnut&aacute;, skryt&iacute; &scaron;ipek na opa&#269;n&eacute;m konci a tak&eacute; hodnoty rozm&#283;ru</p>
 <p><br>
 </p>
 <div class="docnav">
@@ -444,35 +444,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122170401
+Cached time: 20260122170526
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.155 seconds
+CPU time usage: 0.124 seconds
+Real time usage: 0.161 seconds
 Preprocessor visited node count: 1218/1000000
-Post&#8208;expand include size: 30351/2097152 bytes
-Template argument size: 12011/2097152 bytes
+Post&#8208;expand include size: 30359/2097152 bytes
+Template argument size: 12015/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2250/5000000 bytes
+Unstrip post&#8208;expand size: 2254/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.316      1 -total
- 14.70%    5.485      1 Template:Sketcher_Tools_navi/cs
- 11.48%    4.285      2 Template:Navigation_menu_2
- 10.53%    3.928      1 Template:Userdocnavi/cs
- 10.14%    3.783     96 Template:MenuCommand
-  8.89%    3.318      3 Template:PropertyView
-  6.96%    2.597      1 Template:Value
-  5.03%    1.877      2 Template:Docnav
-  4.93%    1.839      3 Template:Variable
-  4.77%    1.781      1 Template:Button
+100.00%   35.226      1 -total
+ 18.95%    6.674      1 Template:Sketcher_Tools_navi/cs
+ 13.12%    4.621      2 Template:Navigation_menu_2
+ 11.26%    3.966      1 Template:Userdocnavi/cs
+  9.32%    3.284     96 Template:MenuCommand
+  8.66%    3.052      3 Template:PropertyView
+  6.36%    2.241      1 Template:Value
+  5.80%    2.042      2 Template:Docnav
+  4.79%    1.686      3 Template:Variable
+  3.99%    1.406     17 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122170401 and revision id 1742510. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122170526 and revision id 1742514. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
