--- a/wiki/cs/Task_Panel.html
+++ b/wiki/cs/Task_Panel.html
@@ -14,7 +14,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p>The <a href="../Task_Panel.html" title="Task Panel">Task Panel</a> appears as a stand-alone <a href="../Combo_view.html#Dock_Task_Panel_on_top_of_Combo_View" class="mw-redirect" title="Combo view">dockable</a> panel called <b>Tasks</b>. It is a customizable space that is able to contain any type of graphical widgets like input fields, checkboxes, spinboxes, buttons, labels, images, and other elements, depending on the currently active tool.
+<p>Panel &uacute;kol&#367; se zobrazuje jako samostatn&yacute; <a href="../Combo_view.html#Dock_Task_Panel_on_top_of_Combo_View" class="mw-redirect" title="Combo view">ukotviteln&yacute;</a> panel s n&aacute;zvem <b>Tvorba</b>. Jedn&aacute; se o p&#345;izp&#367;sobiteln&yacute; prostor, kter&yacute; m&#367;&#382;e obsahovat jak&yacute;koli typ grafick&yacute;ch widget&#367;, jako jsou vstupn&iacute; pole, za&scaron;krt&aacute;vac&iacute; pol&iacute;&#269;ka, roletov&aacute; menu, tla&#269;&iacute;tka, &scaron;t&iacute;tky, obr&aacute;zky a dal&scaron;&iacute; prvky, v z&aacute;vislosti na aktu&aacute;ln&#283; aktivn&iacute;m n&aacute;stroji.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel.png&amp;filetimestamp=20191215005044&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel.png" decoding="async" width="250" height="292" class="mw-file-element" data-file-width="557" data-file-height="651"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Task Panel showing various tools when the <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> is active, and a <a href="../Sketch.html" title="Sketch">sketch</a> is selected.</p>
@@ -88,13 +88,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122170750
+Cached time: 20260122171122
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.098 seconds
-Preprocessor visited node count: 402/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.103 seconds
+Preprocessor visited node count: 401/1000000
 Post&#8208;expand include size: 32569/2097152 bytes
 Template argument size: 11895/2097152 bytes
 Highest expansion depth: 5/100
@@ -104,18 +104,18 @@ Unstrip post&#8208;expand size: 2119/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.650      1 -total
- 31.99%    6.605      1 Template:Std_Base_navi/cs
- 29.85%    6.165      3 Template:Navigation_menu_2
- 23.77%    4.909      1 Template:Interface_navi/cs
- 20.99%    4.334      1 Template:Userdocnavi/cs
-  5.65%    1.167      2 Template:Caption
-  5.64%    1.165      1 Template:TOCright
-  4.58%    0.946      2 Template:Button
-  4.32%    0.892      3 Template:KEY
+100.00%   24.884      1 -total
+ 31.95%    7.950      1 Template:Std_Base_navi/cs
+ 27.57%    6.861      3 Template:Navigation_menu_2
+ 26.10%    6.496      1 Template:Interface_navi/cs
+ 16.13%    4.013      1 Template:Userdocnavi/cs
+  8.59%    2.138      2 Template:Caption
+  5.49%    1.366      2 Template:Button
+  5.12%    1.274      1 Template:TOCright
+  3.68%    0.917      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122170750 and revision id 1742518. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171122 and revision id 1742520. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
