--- a/wiki/cs/Task_Panel.html
+++ b/wiki/cs/Task_Panel.html
@@ -21,7 +21,7 @@
 <p><span id="Working_with_the_Task_Panel"></span>
 </p>
 <h2><span id="Pr.C3.A1ce_s_panelem_.C3.BAkol.C5.AF"></span><span class="mw-headline" id="Pr&aacute;ce_s_panelem_&uacute;kol&#367;">Pr&aacute;ce s panelem &uacute;kol&#367;</span></h2>
-<p>A Task Panel normally opens when a tool that requires user input is activated. If the tool doesn't need user input, it will produce its result or terminate, but won't display a Task Panel. The user input may be anything such as text, 3D point coordinates, elements from a list, faces from a shape, or options to modify the way the tool operates.
+<p>Panel &uacute;kol&#367; se obvykle otev&#345;e, kdy&#382; je aktivov&aacute;n n&aacute;stroj, kter&yacute; vy&#382;aduje zad&aacute;n&iacute; &uacute;daj&#367; u&#382;ivatelem. Pokud n&aacute;stroj nevy&#382;aduje vstup u&#382;ivatele, vygeneruje v&yacute;sledek nebo se ukon&#269;&iacute;, ale nezobraz&iacute; panel &uacute;kol&#367;. U&#382;ivatelsk&yacute; vstup m&#367;&#382;e b&yacute;t cokoli, nap&#345;&iacute;klad text, sou&#345;adnice 3D bod&#367;, prvky ze seznamu, plochy z tvaru nebo mo&#382;nosti &uacute;pravy zp&#367;sobu fungov&aacute;n&iacute; n&aacute;stroje.
 </p><p>There are many tools that require the selection of shapes or objects. In such cases the Task Panel will wait for the user to select the appropriate objects from the <a href="../Tree_View.html" title="Tree View">Tree View</a> or the <a href="../3D_View.html" title="3D View">3D View</a>. When a Task Panel is open, it is possible to switch to the <a href="../Tree_View.html" title="Tree View">Tree View</a> to choose an object. Once this is done, it is possible to switch back to the Task Panel to proceed with the tool. The Task Panel is usually closed by clicking an <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> or a <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> button, or pressing the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> key to abort the tool.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel_ArchComponent.png&amp;filetimestamp=20190928004925&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel_ArchComponent.png" decoding="async" width="250" height="333" class="mw-file-element" data-file-width="424" data-file-height="565"></a></span>
 </p>
@@ -90,12 +90,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122171333
+Cached time: 20260122171537
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.104 seconds
+CPU time usage: 0.110 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 402/1000000
 Post&#8208;expand include size: 32599/2097152 bytes
 Template argument size: 11910/2097152 bytes
@@ -106,18 +106,18 @@ Unstrip post&#8208;expand size: 2119/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.698      1 -total
- 35.38%    8.031      3 Template:Navigation_menu_2
- 35.20%    7.991      1 Template:Std_Base_navi/cs
- 19.95%    4.529      1 Template:Userdocnavi/cs
- 16.67%    3.783      1 Template:Interface_navi/cs
-  7.09%    1.609      2 Template:Caption
-  7.04%    1.599      1 Template:TOCright
-  5.74%    1.302      2 Template:Button
-  4.89%    1.111      3 Template:KEY
+100.00%   37.527      1 -total
+ 33.28%   12.490      1 Template:Std_Base_navi/cs
+ 31.48%   11.814      3 Template:Navigation_menu_2
+ 22.85%    8.576      1 Template:Userdocnavi/cs
+ 20.73%    7.780      1 Template:Interface_navi/cs
+  5.75%    2.158      2 Template:Caption
+  5.67%    2.127      1 Template:TOCright
+  4.24%    1.592      2 Template:Button
+  4.20%    1.577      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171333 and revision id 1742525. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412279-0!canonical and timestamp 20260122171536 and revision id 1742527. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
