--- a/wiki/cs/Combo_View.html
+++ b/wiki/cs/Combo_View.html
@@ -18,7 +18,9 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Combo_View_Example.png&amp;filetimestamp=20240717084115&amp;.html" class="mw-file-description"><img src="../File/Combo_View_Example.png" decoding="async" width="277" height="368" class="mw-file-element" data-file-width="277" data-file-height="368"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Kombinovan&yacute; pohled (karta Model) s ukotven&yacute;m panelem &uacute;kol&#367; (karta Tvorba)</p>
-<h2><span class="mw-headline" id="Dock_Task_Panel_on_top_of_Combo_View">Dock Task Panel on top of Combo View</span></h2>
+<p><span id="Dock_Task_Panel_on_top_of_Combo_View"></span>
+</p>
+<h2><span id="Panel_.C3.BAkol.C5.AF_dokovan.C3.BD_v_horn.C3.AD_.C4.8D.C3.A1sti_kombinovan.C3.A9ho_zobrazen.C3.AD"></span><span class="mw-headline" id="Panel_&uacute;kol&#367;_dokovan&yacute;_v_horn&iacute;_&#269;&aacute;sti_kombinovan&eacute;ho_zobrazen&iacute;">Panel &uacute;kol&#367; dokovan&yacute; v horn&iacute; &#269;&aacute;sti kombinovan&eacute;ho zobrazen&iacute;</span></h2>
 <ol><li>Make sure the Combo View is docked along an edge of the FreeCAD window.</li>
 <li>Move the cursor to the very top of the Task Panel.</li>
 <li>The arrow becomes a hand.</li>
@@ -90,13 +92,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122174741
+Cached time: 20260122174826
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.109 seconds
-Preprocessor visited node count: 388/1000000
+CPU time usage: 0.089 seconds
+Real time usage: 0.151 seconds
+Preprocessor visited node count: 389/1000000
 Post&#8208;expand include size: 30167/2097152 bytes
 Template argument size: 11772/2097152 bytes
 Highest expansion depth: 5/100
@@ -106,19 +108,19 @@ Unstrip post&#8208;expand size: 1966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.896      1 -total
- 32.99%   10.193      1 Template:Std_Base_navi/cs
- 23.65%    7.306      3 Template:Navigation_menu_2
- 21.35%    6.595      1 Template:Interface_navi/cs
- 11.44%    3.535      1 Template:Userdocnavi/cs
- 11.20%    3.460      2 Template:Value
-  5.72%    1.768      1 Template:Caption
-  5.54%    1.713      1 Template:TOCright
-  5.16%    1.593      2 Template:Incode
-  4.63%    1.430      1 Template:VersionPlus
+100.00%   42.734      1 -total
+ 27.39%   11.703      1 Template:Interface_navi/cs
+ 27.38%   11.699      3 Template:Navigation_menu_2
+ 21.76%    9.300      1 Template:Std_Base_navi/cs
+ 19.15%    8.185      2 Template:Value
+ 15.22%    6.504      1 Template:Userdocnavi/cs
+ 13.32%    5.692      2 Template:Incode
+  4.61%    1.968      1 Template:MenuCommand
+  3.27%    1.398      1 Template:TOCright
+  3.18%    1.361      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174740 and revision id 1742548. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122174826 and revision id 1742550. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
