--- a/wiki/cs/Combo_View.html
+++ b/wiki/cs/Combo_View.html
@@ -27,7 +27,9 @@
 <li>Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;et&aacute;hn&#283;te panel &uacute;kol&#367; na horn&iacute; &#269;&aacute;st kombinovan&eacute;ho zobrazen&iacute;.</li>
 <li>Pohybujte se svisle, dokud nebudou zv&yacute;razn&#283;ny horn&iacute; i doln&iacute; &#269;&aacute;sti kombinovan&eacute;ho zobrazen&iacute;.<br><span typeof="mw:File"><a href="../index.php?title=Tasks_Dockable.png&amp;filetimestamp=20240717171217&amp;.html" class="mw-file-description"><img src="../File/Tasks_Dockable.png" decoding="async" width="200" height="236" class="mw-file-element" data-file-width="338" data-file-height="398"></a></span></li>
 <li>Uvoln&#283;te tla&#269;&iacute;tko my&scaron;i.</li></ol>
-<h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
+<p><span id="Preferences"></span>
+</p>
+<h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
 <p>See also: <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
 </p><p>The Combo View is available if <b>Edit &rarr; Preferences &rarr; General &rarr; General &rarr; Tree View and Property View mode</b> is set to <code>Combined</code>. If it is set to <code>Independent</code> the Tree View and the Property View appear as separate panels.
 </p><p><br>
@@ -92,13 +94,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122175151
+Cached time: 20260122175158
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.110 seconds
-Preprocessor visited node count: 389/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.109 seconds
+Preprocessor visited node count: 390/1000000
 Post&#8208;expand include size: 30167/2097152 bytes
 Template argument size: 11772/2097152 bytes
 Highest expansion depth: 5/100
@@ -108,19 +110,19 @@ Unstrip post&#8208;expand size: 1967/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.470      1 -total
- 29.49%    8.395      1 Template:Std_Base_navi/cs
- 26.13%    7.439      3 Template:Navigation_menu_2
- 21.80%    6.205      1 Template:Interface_navi/cs
- 15.95%    4.542      1 Template:Userdocnavi/cs
- 10.09%    2.873      2 Template:Value
-  5.85%    1.665      2 Template:Incode
-  5.74%    1.633      1 Template:Caption
-  5.56%    1.582      1 Template:VersionPlus
-  4.61%    1.312      1 Template:TOCright
+100.00%   32.172      1 -total
+ 26.91%    8.659      1 Template:Std_Base_navi/cs
+ 21.53%    6.926      3 Template:Navigation_menu_2
+ 20.65%    6.645      1 Template:Userdocnavi/cs
+ 19.39%    6.237      1 Template:Interface_navi/cs
+  9.86%    3.171      2 Template:Value
+  6.52%    2.099      1 Template:Caption
+  5.77%    1.856      1 Template:TOCright
+  5.73%    1.845      1 Template:VersionPlus
+  3.48%    1.120      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122175151 and revision id 1742554. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122175158 and revision id 1742556. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
