--- a/wiki/cs/Combo_View.html
+++ b/wiki/cs/Combo_View.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Combo_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Vista combinata (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Combo_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Widok po&#322;&#261;czony (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Combo_View.html" class="mw-pt-progress mw-pt-progress--high" title="Visualiza&ccedil;&atilde;o combinada (90% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Combo_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1050;&#1086;&#1084;&#1073;&#1080;&#1085;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1085;&#1099;&#1081; &#1074;&#1080;&#1076; (&#1050;&#1086;&#1084;&#1073;&#1086; &#1074;&#1080;&#1076;) (90% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Combo_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#12467;&#12531;&#12508;&#12499;&#12517;&#12540; (10% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -31,7 +31,7 @@
 </p>
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
 <p>Viz tak&eacute;: <a href="../Preferences_Editor.html" title="Preferences Editor">Editor p&#345;edvoleb</a>.
-</p><p>The Combo View is available if <b>Edit &rarr; Preferences &rarr; General &rarr; General &rarr; Tree View and Property View mode</b> is set to <code>Combined</code>. If it is set to <code>Independent</code> the Tree View and the Property View appear as separate panels.
+</p><p>Kombinovan&yacute; pohled je k dispozici, pokud je <b>Upravit &rarr; Nastaven&iacute; &rarr; Obecn&eacute; &rarr; Obecn&eacute; &rarr; Re&#382;im zobrazen&iacute; stromu a zobrazen&iacute; vlastnost&iacute;</b> nastaveno na <code>Kombinovan&eacute;</code>. Pokud je nastaveno na <code>Nez&aacute;visl&eacute;</code>, stromov&eacute; zobrazen&iacute; a zobrazen&iacute; vlastnost&iacute; se zobraz&iacute; jako samostatn&eacute; panely.
 </p><p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -94,35 +94,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122175236
+Cached time: 20260122175552
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.116 seconds
+CPU time usage: 0.088 seconds
+Real time usage: 0.143 seconds
 Preprocessor visited node count: 390/1000000
-Post&#8208;expand include size: 30167/2097152 bytes
-Template argument size: 11772/2097152 bytes
+Post&#8208;expand include size: 30194/2097152 bytes
+Template argument size: 11799/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1967/5000000 bytes
+Unstrip post&#8208;expand size: 1971/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.266      1 -total
- 27.66%    8.370      1 Template:Std_Base_navi/cs
- 23.04%    6.974      3 Template:Navigation_menu_2
- 21.11%    6.388      1 Template:Interface_navi/cs
- 17.13%    5.186      1 Template:Userdocnavi/cs
- 10.95%    3.314      2 Template:Value
-  5.87%    1.777      2 Template:Incode
-  5.59%    1.691      1 Template:Caption
-  5.18%    1.568      1 Template:TOCright
-  5.04%    1.525      1 Template:VersionPlus
+100.00%   42.880      1 -total
+ 41.58%   17.829      1 Template:Std_Base_navi/cs
+ 26.99%   11.573      3 Template:Navigation_menu_2
+ 20.37%    8.736      1 Template:Interface_navi/cs
+ 12.63%    5.414      1 Template:Userdocnavi/cs
+  7.64%    3.275      2 Template:Value
+  4.57%    1.958      1 Template:Caption
+  3.96%    1.697      1 Template:VersionPlus
+  3.89%    1.670      1 Template:MenuCommand
+  3.84%    1.647      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122175236 and revision id 1742558. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412292-0!canonical and timestamp 20260122175552 and revision id 1742560. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
