--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -16,7 +16,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p>The <a href="../Tree_View.html" title="Tree View">Tree View</a> appears in the upper section of the <b>Model</b> panel (if the <a href="../Combo_View.html" title="Combo View">Combo View</a> is active) or as a stand-alone panel. It shows all user defined objects that are part of a FreeCAD document. The Tree View is a representation of the <a href="../Document_structure.html" title="Document structure">document's structure</a>, and indicates what information is saved to disk.
+<p><a href="../Tree_View.html" title="Tree View">Stromov&eacute; zobrazen&iacute;</a> se zobrazuje v horn&iacute; &#269;&aacute;sti panelu <b>Model</b> (pokud je aktivn&iacute; <a href="../Combo_View.html" title="Combo View">Kombinovan&eacute; zobrazen&iacute;</a>) nebo jako samostatn&yacute; panel. Zobrazuje v&scaron;echny u&#382;ivatelsky definovan&eacute; objekty, kter&eacute; jsou sou&#269;&aacute;st&iacute; dokumentu FreeCADu. Stromov&eacute; zobrazen&iacute; je zn&aacute;zorn&#283;n&iacute;m <a href="../index.php?title=Struktura_dokumentu&amp;action=edit&amp;redlink=1.html" class="new" title="Struktura dokumentu (page does not exist)">struktury dokumentu</a> a ukazuje, jak&eacute; informace jsou ulo&#382;eny na disku.
 </p><p>These objects don't necessarily have to be geometrical shapes visible in the <a href="../3D_View.html" title="3D View">3D View</a>, but can also be supporting data objects created with any of the <a href="../Workbenches.html" title="Workbenches">workbenches</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
 </p>
@@ -154,12 +154,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122180931
+Cached time: 20260122181129
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.569 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.190 seconds
 Preprocessor visited node count: 749/1000000
 Post&#8208;expand include size: 37917/2097152 bytes
 Template argument size: 12152/2097152 bytes
@@ -170,19 +170,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  226.009      1 -total
- 28.97%   65.478      1 Template:Std_Base_navi/cs
- 19.39%   43.818      3 Template:Navigation_menu_2
- 15.02%   33.946      2 Template:PropertyData
-  9.05%   20.452      1 Template:Userdocnavi/cs
-  8.84%   19.984      1 Template:PropertyView
-  8.52%   19.253      1 Template:FALSE
-  8.20%   18.531      3 Template:Variable
-  7.77%   17.551      1 Template:Interface_navi/cs
-  4.70%   10.620      6 Template:MenuCommand
+100.00%   43.057      1 -total
+ 21.33%    9.186      1 Template:Std_Base_navi/cs
+ 17.38%    7.482      3 Template:Navigation_menu_2
+ 15.60%    6.718      1 Template:Userdocnavi/cs
+ 14.92%    6.426      1 Template:Interface_navi/cs
+ 10.58%    4.557      2 Template:PropertyData
+  6.44%    2.773      3 Template:Variable
+  5.42%    2.334      1 Template:TOCright
+  5.05%    2.175     19 Template:KEY
+  5.02%    2.162      1 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122180930 and revision id 1742565. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181129 and revision id 1742567. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
