--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -154,12 +154,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122181129
+Cached time: 20260122181138
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.190 seconds
+CPU time usage: 0.109 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 749/1000000
 Post&#8208;expand include size: 37917/2097152 bytes
 Template argument size: 12152/2097152 bytes
@@ -170,19 +170,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.057      1 -total
- 21.33%    9.186      1 Template:Std_Base_navi/cs
- 17.38%    7.482      3 Template:Navigation_menu_2
- 15.60%    6.718      1 Template:Userdocnavi/cs
- 14.92%    6.426      1 Template:Interface_navi/cs
- 10.58%    4.557      2 Template:PropertyData
-  6.44%    2.773      3 Template:Variable
-  5.42%    2.334      1 Template:TOCright
-  5.05%    2.175     19 Template:KEY
-  5.02%    2.162      1 Template:PropertyView
+100.00%   28.772      1 -total
+ 25.98%    7.475      1 Template:Std_Base_navi/cs
+ 20.77%    5.977      3 Template:Navigation_menu_2
+ 16.63%    4.784      1 Template:Userdocnavi/cs
+ 13.25%    3.811      1 Template:Interface_navi/cs
+  8.66%    2.492      2 Template:PropertyData
+  7.40%    2.128      1 Template:PropertyView
+  5.74%    1.650      3 Template:Variable
+  4.50%    1.296     19 Template:KEY
+  4.22%    1.213      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181129 and revision id 1742567. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181138 and revision id 1742567. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
